Update src/test/java/org/openrewrite/java/spring/CommentOutSpringPropertyKeyTest.java
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>